# django-admin-notice

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  manage.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: lint.yml  publish.yml  test.yml  tests.yml
admin_notice/: apps.py  conf.py  context_processors.py
admin_notice/templates/admin/: base.html
tests/: settings.py  test_rendering.py
tests/project/: manage.py
tests/project/project/: settings.py  urls.py
tests/tests/: test_rendering.py
