[tool.poetry]
name = "django-admin-notice"
version = "3.0.0"
description = "Show a floating notice banner above the Django admon interface"
authors = ["Jonathan Ehwald <github@ehwald.info>"]
license = "MIT"
readme = "README.md"
packages = [{include = "admin_notice"}]
homepage = "https://github.com/DoctorJohn/django-admin-notice"
repository = "https://github.com/DoctorJohn/django-admin-notice"
documentation = "https://github.com/DoctorJohn/django-admin-notice"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pre-commit = "^3.5.0"
faker = "^25.8.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-django = "^4.1.0"
pytest-randomly = "^3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.project.project.settings"
