[project]
name = "django-admin-notice"
version = "3.3.0"
description = "Show a floating notice banner above the Django admon interface"
authors = [{ name = "Jonathan Ehwald", email = "github@ehwald.info" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = ["django (>=4.2)"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/DoctorJohn/django-admin-notice"
repository = "https://github.com/DoctorJohn/django-admin-notice"
documentation = "https://github.com/DoctorJohn/django-admin-notice"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "faker>=37.1.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-randomly>=3.16.0",
    "ruff>=0.11.6",
]

[tool.hatch.build.targets.wheel]
packages = ["admin_notice"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.project.project.settings"
addopts = "--cov=admin_notice --cov-report term-missing --cov-report html"
