[metadata]
name = django-admin-notice
version = attr: admin_notice.__version__
description = Show a floating notice banner above the Django admin interface
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Jonathan Ehwald
author_email = pypi@ehwald.info
url = https://github.com/DoctorJohn/django-admin-notice
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
zip_safe=False
python_requires = >=3.6
install_requires =
    django >= 2.2
packages =
    admin_notice

[options.extras_require]
dev =
    flake8~=3.9.0
    black~=19.10b0
    pre-commit~=2.11.0
    faker~=8.0.0
    pytest~=6.2.2
    pytest-cov~=2.11.1
    pytest-django~=4.1.0
    tox~=3.23.0
    twine~=3.4.1

[flake8]
max-line-length=119
